--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,9 @@
 
 .text-gradient-1 {
   margin-right: 1rem;
-  background-image: -webkit-gradient(linear,left top,right top,from(#99f6e4),to(#ffcfdf));
-  background-image: -webkit-linear-gradient(left,#99f6e4,#99f6e4);
-  background-image: linear-gradient(90deg,#99f6e4,#f8b4ca);
+  background-image: -webkit-gradient(linear,left top,right top,from(#8c9eff),to(#5ae5c9));
+  background-image: -webkit-linear-gradient(left,#8c9eff,#8c9eff);
+  background-image: linear-gradient(90deg,#8c9eff,#5ae5c9);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
