--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,27 @@
 }
 
 .active {
-  color: #6366f1;
+  /* color: #6366f1; */
+  color: #FF6057;
 }
 
 #social:hover {
-  fill: #6366f1;
+  /* fill: #6366f1; */
+  fill: #FF6057;
 }
 
 .text-gradient-1 {
+  margin-right: 1rem;
+  background-image: -webkit-gradient(linear,left top,right top,from(#FF6057),to(#FFCCCC));
+  background-image: -webkit-linear-gradient(left,#FF6057,#FF6057);
+  background-image: linear-gradient(90deg,#FF6057,#FFCCCC);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
+}
+
+.text-gradient-2 {
   margin-right: 1rem;
   background-image: -webkit-gradient(linear,left top,right top,from(#8c9eff),to(#5ae5c9));
   background-image: -webkit-linear-gradient(left,#8c9eff,#8c9eff);
@@ -41,14 +54,4 @@
 
 body {
   height: 100%;
-}
-
-#root, main {
-  display: flex;
-  flex-direction: column;
-}
-
-.contact,
-.portfolio {
-  height: calc(100vh - 210px);
 }
