--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,10 @@
 }
 
 .active {
-  /* color: #6366f1; */
-  color: #FF6057;
+  color: #6366f1;
 }
 
 #social:hover {
-  /* fill: #6366f1; */
   fill: #FF6057;
 }
 
@@ -54,4 +52,17 @@
 
 body {
   height: 100%;
+}
+
+.bg-pattern-grid {
+  background-size: 76px 76px;
+  background-image:
+    linear-gradient(to right, rgba(163, 163, 163, 0.319) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(198, 198, 198, 0.319) 1px, transparent 1px);
+    background-position: -1px -1px;
+}
+
+.bg-pattern-dots {
+  background-size: 40px 40px;
+  background-image: radial-gradient(circle, #000000 1px, rgba(0, 0, 0, 0) 1px);
 }
